--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "Discord-Bot-Maker-Bot",
-	"author": "Robert Borghese",
+	"name": "Scav-Homie",
+	"author": "havoX#7808",
 	"main": "bot.js",
 	"version": "1.2.9",
 	"dependencies": {
