--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {
 		"discord.js": "^11.2.0",
 		"fstorm": "^0.1.3",
-		"jimp": "^0.2.28"
+		"jimp": "^0.2.28",
+		"xmldom": "^0.2.1"
 	}
 }
