--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"main": "bot.js",
 	"version": "1.2.9",
 	"dependencies": {
-		"discord.js": "^11.2.0",
+		"discord.js": "^11.6.4",
+		"fs": "0.0.1-security",
 		"fstorm": "^0.1.3",
 		"jimp": "^0.2.28",
 		"xmldom": "^0.2.1"
