--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "prefix": "!",
-    "token": "Njg5MjU4NjQ0OTMxNzM5NjQ5.Xwjrww.qcVIjhQzkv0WccLXD75yrce-UQw"
+    "prefix": "%",
+    "token": "NDgzNzMzNDEwMzg5NTU3MjU5.XiSt2Q.5GbXAf0Rn4RbpnfOAgsvOnyQNN4"
 }
