--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "%",
-    "token": "NDgzNzMzNDEwMzg5NTU3MjU5.XiSt2Q.5GbXAf0Rn4RbpnfOAgsvOnyQNN4"
+    "token": "NDgzNzMzNDEwMzg5NTU3MjU5.W4Rd2A.AMvWhVosAKueyz2OvTBZTCX9KOM"
 }
