--- a/commands/config.json
+++ b/commands/config.json
@@ -25,6 +25,10 @@
     "bspace": "\n|                  - Budget -                   |",
 
 
+
+    "wilson": "\n| Wilson        | Auxillary    | 2k₽   | Mc LL2 |",
+    "stihex": "\n| STI HEX       | Auxillary    | 4k₽   | Mc LL3 |",
+    "caspian": "\n| Caspian Trik  | Auxillary    | 4k₽   | Mc LL3 |",
     "shade": "\n| Sights shade  | Auxillary    | 106₽  | Pr LL1 |",
 
 
@@ -47,6 +51,7 @@
 
 
 
+    "anarchy": "\n| Anarchy       | Muzzle       | 5k₽   | Mc LL2 |",
     "TJ": "\n| TJ            | Muzzle       | 3k₽   | Mc LL2 |",
     "g4": "\n| G4            | Muzzle       | ~8k₽  | Flea   |",
     "mk20": "\n| Mk.2.0        | Muzzle       | ~6k₽  | Flea   |",
@@ -135,7 +140,7 @@
     "rp1": "\n| RP-1          | Chrg Handle  | 3k₽   | Sk LL2 |",
 
 
-
+    "mecgar": "\n| Mec-Gar      | Magazine     | 20$   | Pk LL3 |",
     "m87010": "\n| 10-shell      | Magazine     | 3k₽   | Mc LL3 |",
     "mp915": "\n| 15-round      | Magazine     | 17$   | Pk LL2 |",
     "mp925": "\n| 25-round      | Magazine     | 25$   | Pk LL3 |",
@@ -167,6 +172,8 @@
     "m70030": "\n| Model 700     | 30mm rings   | 3k₽   | Jg LL3 |",
 
 
+
+    "weigand": "\n| Weig-a-tinny  | Mount        | 3k₽   | Mc LL2 |",
     "axion": "\n| Axion         | Mount        | 5k₽   | Jg LL1 |",
     "fnrmr": "\n| FN RMR        | Mount        | 2k₽   | Mc LL2 |",
     "x4sr1mp": "\n| quad rail     | Mount        | 10k₽  | Pr LL3 |",
@@ -335,7 +342,7 @@
     "b11": "\n| B-11          | Handguard    | 3k₽   | Sk LL2 |",
 
 
-
+    "pachm19": "\n| Pachmayr      | Pistol Grip  | 3k₽   | Mc LL2 |",
     "p226hogue": "\n| Hogue Chain   | Pistol Grip  | 9k₽   | Pk LL2 |",
     "pach": "\n| Pachmayr      | Pistol Grip  | 9€    | Mc LL2 |",
     "razor": "\n| Razor Arms    | Pistol Grip  | 5k₽   | Mc LL2 |",
@@ -373,7 +380,7 @@
 
     "end": "```",
 
-    "all9191": "```╔════════╦═════╤═════╤══════╤════════╤════════╗\n║ Name   ║ Dmg │ Pen │ Accu │ Recoil │ Trader ║        \n╠════════╬═════╪═════╪══════╪════════╪════════╣\n║ 7N31   ║ 52  │ 39  │ +15% │ +15%   │ Pr LL4 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ AP 6.3 ║ 52  │ 30  │      │        │ Pk LL3 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ Pst    ║ 54  │ 20  │      │        │ Pr LL2 ║\n║        ║     │     │      │        │ Pk LL2 ║\n║        ║     │     │      │        │ Mc LL1 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ GT     ║ 58  │ 14  │ -5%  │ -6%    │ Mc LL3 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ CCI    ║ 70  │ 10  │      │        │ Sk LL4 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ PSO    ║ 59  │ 10  │      │        │ Pr LL1 ║\n║        ║     │     │      │        │ Jg LL1 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ QuakeM ║ 85  │ 8   │ +10% │ +10%   │ Pk LL2 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ RIP    ║ 102 │ 2   │      │ +20%   │ Sk LL4 ║\n╚════════╩═════╧═════╧══════╧════════╧════════╝```",
+    "all9191": "```╔════════╦═════╤═════╤══════╤════════╤════════╗\n║ Name   ║ Dmg │ Pen │ Accu │ Recoil │ Trader ║        \n╠════════╬═════╪═════╪══════╪════════╪════════╣\n║ 7N31   ║ 52  │ 39  │ +15% │ +15%   │ Pr LL4 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ AP 6.3 ║ 52  │ 30  │      │        │ Pk LL3 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ Pst    ║ 54  │ 20  │      │        │ Mc LL1 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ GT     ║ 58  │ 14  │ -5%  │ -6%    │ Mc LL3 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ CCI    ║ 70  │ 10  │      │        │ Sk LL4 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ PSO    ║ 59  │ 10  │      │        │ Pr LL1 ║\n║        ║     │     │      │        │ Jg LL1 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ QuakeM ║ 85  │ 8   │ +10% │ +10%   │ Pk LL2 ║\n╟────────╫─────┼─────┼──────┼────────┼────────╢\n║ RIP    ║ 102 │ 2   │      │ +20%   │ Sk LL4 ║\n╚════════╩═════╧═════╧══════╧════════╧════════╝```",
     "all9192": "```╔══════╦══════════╤══════════╤═════════╤══════════╗\n║ Name ║ ArmorDmg │ Frag.Chc │ Ric.Chc │ Spec.Fx  ║\n╠══════╬══════════╪══════════╪═════════╪══════════╣\n║ 7N31 ║ 53%      │ 5%       │ 20%     │          ║\n╟──────╫──────────┼──────────┼─────────┼──────────╢\n║ 6.3  ║ 48%      │ 5%       │ 20%     │          ║\n╟──────╫──────────┼──────────┼─────────┼──────────╢\n║ Pst  ║ 33%      │ 15%      │ 5%      │          ║\n╟──────╫──────────┼──────────┼─────────┼──────────╢\n║ GT   ║ 33%      │ 15%      │ 5%      │ Tracer   ║\n╟──────╫──────────┼──────────┼─────────┼──────────╢\n║ CCI  ║ 38%      │ 25%      │ 6.5%    │          ║\n╟──────╫──────────┼──────────┼─────────┼──────────╢\n║ PSO  ║ 32%      │ 25%      │ 6.5%    │ Subsonic ║\n╟──────╫──────────┼──────────┼─────────┼──────────╢\n║ QuaM ║ 22%      │ 10%      │ 10%     │ Subsonic ║\n╟──────╫──────────┼──────────┼─────────┼──────────╢\n║ RIP  ║ 11%      │ 100%     │ 0.2%    │          ║\n╚══════╩══════════╧══════════╧═════════╧══════════╝```",
     "b919": "```╔════════╤═════╤═════╤════════╤═══════╗\n║  Name  │ Dmg │ Pen │ Trader │ Price ║\n╟────────┴─────┴─────┴────────┴───────╢\n║              Top-Tier               ║\n╟────────┬─────┬─────┬────────┬───────╢\n║ 7N31   │ 52  │ 39  │ Pr LL4 │ 489₽  ║\n╟────────┴─────┴─────┴────────┴───────╢\n║              Mid-Tier               ║\n╟────────┬─────┬─────┬────────┬───────╢\n║ AP 6.3 │ 52  │ 30  │ Pk LL3 │ 3$    ║\n╟────────┴─────┴─────┴────────┴───────╢\n║              Low-Tier               ║\n╟────────┬─────┬─────┬────────┬───────╢\n║ Pst    │ 58  │ 20  │ Mc LL1 │ 67₽   ║\n╟────────┴─────┴─────┴────────┴───────╢\n║           Flesh round(s)            ║\n╟────────┬─────┬─────┬────────┬───────╢\n║ RIP    │ 102 │ 2   │ Sk LL4 │ Trade ║\n╟────────┴─────┴─────┤  &     │  or   ║\n║                    │ Flea   │ ~740₽ ║\n╟────────┬─────┬─────┼────────┼───────╢\n║ QuakeM │ 85  │ 8   │ Pk LL2 │ 2$    ║\n╟────────┼─────┼─────┼────────┼───────╢\n║ CCI    │ 70  │ 10  │ Sk LL4 │ 360₽  ║\n╚════════╧═════╧═════╧════════╧═══════╝```",
 
@@ -417,8 +424,8 @@
     "all9392": "```╔══════╦══════════╤══════════╤═════════╤═══════╗\n║ Name ║ ArmorDmg │ Frag.Chc │ Ric.Chc │ Sp.Fx ║\n╠══════╬══════════╪══════════╪═════════╪═══════╣\n║ BP   ║ 68%      │ 10%      │ +50%    │ Subs. ║\n╟──────╫──────────┼──────────┼─────────┼───────╢\n║ SPP  ║ 56%      │ 20%      │ +40%    │ Subs. ║\n╟──────╫──────────┼──────────┼─────────┼───────╢\n║ SP6  ║ 60%      │ 10%      │ +50%    │ Subs. ║\n╟──────╫──────────┼──────────┼─────────┼───────╢\n║ SP5  ║ 52%      │ 20%      │ +40%    │ Subs. ║\n╚══════╩══════════╧══════════╧═════════╧═══════╝```",
     "b939": "```╔══════╤═════╤═════╤════════╤════════╗\n║ Name │ Dmg │ Pen │ Trader │ Price  ║\n╟──────┴─────┴─────┴────────┴────────╢\n║              Top-Tier              ║\n╟──────┬─────┬─────┬────────┬────────╢\n║ BP   │ 60  │ 48  │ Pr LL4 │ Trade  ║\n╟──────┴─────┴─────┤   &    │   or   ║\n║                  │ Flea   │ ~1.4k₽ ║\n╟──────┬─────┬─────┼────────┼────────╢\n║ SPP  │ 64  │ 45  │ Pr LL3 │ Trade  ║\n╟──────┴─────┴─────┤   &    │   or   ║\n║                  │ Pr LL4 │ 1.2k₽  ║\n╟──────┬─────┬─────┼────────┼────────╢\n║ SP-6 │ 58  │ 43  │ Pr LL3 │ 764₽   ║\n╟──────┴─────┴─────┴────────┴────────╢\n║              Mid-Tier              ║\n╟──────┬─────┬─────┬────────┬────────╢\n║ SP-5 │ 68  │ 35  │ Pr LL2 │ 229₽   ║\n╚══════╧═════╧═════╧════════╧════════╝```",
 
-    "alln7621": "```╔══════╦═════╤═════╤══════╤════════╤════════╗\n║ Name ║ Dmg │ Pen │ Accu │ Recoil │ Trader ║\n╠══════╬═════╪═════╪══════╪════════╪════════╣\n║ M61  ║ 70  │ 68  │ +3%  │ +10%   │ Pr LL4 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ M62  ║ 79  │ 54  │ -6%  │ -5%    │ Pr LL3 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ M80  ║ 80  │ 41  │      │        │ Pr LL2 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ TPZ  ║ 60  │ 36  │ -8%  │ -5%    │ Jg LL1 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ BPZ  ║ 88  │ 31  │      │ -3%    │ Jg LL2 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ U.N  ║ 107 │ 15  │ +10% │ -5%    │ Jg LL4 ║\n╚══════╩═════╧═════╧══════╧════════╧════════╝```",
-    "alln7622": "```╔══════╦══════════╤══════════╤═════════╤═════════╗\n║ Name ║ ArmorDmg │ Frag.Chc │ Ric.Chc │ Spec.Fx ║\n╠══════╬══════════╪══════════╪═════════╪═════════╣\n║ M61  ║ 83%      │ 13%      │ 30%     │         ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ M62  ║ 75%      │ 14%      │ 38%     │ Tracer  ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ M80  ║ 66%      │ 17%      │ 38%     │         ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ TPZ  ║ 40%      │ 20%      │ 50%     │         ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ BPZ  ║ 33%      │ 25%      │ 20%     │         ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ U.N  ║ 20%      │ 70%      │ 20%     │         ║\n╚══════╩══════════╧══════════╧═════════╧═════════╝```",
+    "alln7621": "```╔══════╦═════╤═════╤══════╤════════╤════════╗\n║ Name ║ Dmg │ Pen │ Accu │ Recoil │ Trader ║\n╠══════╬═════╪═════╪══════╪════════╪════════╣\n║ M993 ║ 67  │ 70  │ +3%  │ +8%   │ Flea   ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ M61  ║ 70  │ 68  │ +3%  │ +10%   │ Pr LL4 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ M62  ║ 79  │ 54  │ -6%  │ -5%    │ Pr LL3 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ M80  ║ 80  │ 41  │      │        │ Pr LL2 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ TPZ  ║ 60  │ 36  │ -8%  │ -5%    │ Jg LL1 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ BPZ  ║ 88  │ 31  │      │ -3%    │ Jg LL2 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ U.N  ║ 107 │ 15  │ +10% │ -5%    │ Jg LL4 ║\n╚══════╩═════╧═════╧══════╧════════╧════════╝```",
+    "alln7622": "```╔══════╦══════════╤══════════╤═════════╤═════════╗\n║ Name ║ ArmorDmg │ Frag.Chc │ Ric.Chc │ Spec.Fx ║\n╠══════╬══════════╪══════════╪═════════╪═════════╣\n║ M993 ║ 85%      │ 13%      │ 28%     │       ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ M61  ║ 83%      │ 13%      │ 30%     │         ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ M62  ║ 75%      │ 14%      │ 38%     │ Tracer  ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ M80  ║ 66%      │ 17%      │ 38%     │         ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ TPZ  ║ 40%      │ 20%      │ 50%     │         ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ BPZ  ║ 33%      │ 25%      │ 20%     │         ║\n╟──────╫──────────┼──────────┼─────────┼─────────╢\n║ U.N  ║ 20%      │ 70%      │ 20%     │         ║\n╚══════╩══════════╧══════════╧═════════╧═════════╝```",
     "bn762": "```╔════════╤═════╤═════╤════════╤═══════╗\n║  Name  │ Dmg │ Pen │ Trader │ Price ║\n╟────────┴─────┴─────┴────────┴───────╢\n║              Top-Tier               ║\n╟────────┬─────┬─────┬────────┬───────╢\n║ M993   │ 67  │ 70  │ Flea   │ ~3k₽  ║\n╟────────┼─────┼─────┼────────┼───────╢\n║ M61    │ 70  │ 68  │ Pk LL4 │ 10$   ║\n╟────────┼─────┼─────┼────────┼───────╢\n║ M62    │ 79  │ 54  │ Pk LL3 │ 4$    ║\n╟────────┴─────┴─────┴────────┴───────╢\n║              Mid-Tier               ║\n╟────────┬─────┬─────┬────────┬───────╢\n║ M80    │ 80  │ 41  │ Pk LL2 │ 2$    ║\n╟────────┴─────┴─────┴────────┴───────╢\n║              Low-Tier               ║\n╟────────┬─────┬─────┬────────┬───────╢\n║ BPZ    │ 88  │ 31  │ Jg LL2 │ 153₽  ║\n╟────────┴─────┴─────┴────────┴───────╢\n║           Flesh round(s)            ║\n╟────────┬─────┬─────┬────────┬───────╢\n║ UltraN │ 107 │ 15  │ Jg LL4 │ 327₽  ║\n╚════════╧═════╧═════╧════════╧═══════╝```",
 
     "allr7621": "```╔══════╦═════╤═════╤══════╤════════╤════════╗\n║ Name ║ Dmg │ Pen │ Accu │ Recoil │ Trader ║\n╠══════╬═════╪═════╪══════╪════════╪════════╣\n║ 7N37 ║ 72  │ 70  │      │        │ Pr LL4 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ SNB  ║ 75  │ 62  │      │ +10%   │ Pr LL4 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ 7BT1 ║ 78  │ 59  │ -2%  │ -4%    │ Pr LL4 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ 7N1  ║ 86  │ 45  │ +10% │ +8%    │ Pr LL3 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ LPS  ║ 81  │ 42  │      │        │ Pr LL1 ║\n╟──────╫─────┼─────┼──────┼────────┼────────╢\n║ T46M ║ 82  │ 41  │ -1%  │ -5%    │ Pr LL2 ║\n╚══════╩═════╧═════╧══════╧════════╧════════╝```",
