--- a/commands/config.json
+++ b/commands/config.json
@@ -1,7 +1,7 @@
 {
     "gameUpdate": "Updated for game version: 0.12.7.8445",
-    "invitelink": "https://discord.gg/BAZhHPW",
-    "author": "Scav Homie has been improved! Join my server!",
+    "invitelink": "https://www.reddit.com/r/EscapefromTarkov/comments/i7ajqt/scav_homie_eft_discord_info_and_helper_bot/",
+    "author": "Please go support my reddit post about scav homie, click me!",
     "topTable": "```| Name          | Type         | Price | Trader |\n|---------------|--------------|-------|--------|",
     "endTable": "\n|---------------|--------------|-------|--------|```",
     "space": "\n|---------------|--------------|-------|--------|",
