--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "prefix": "!",
-    "token": "Njg5MjU4NjQ0OTMxNzM5NjQ5.XnAQIg._9rlxLVYtOmaZH-a7vl78J5G4CY"
+    "prefix": "%",
+    "token": "NDgzNzMzNDEwMzg5NTU3MjU5.W4Rd2A.AMvWhVosAKueyz2OvTBZTCX9KOM"
 }
