--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 BOT_TOKEN = NDgzNzMzNDEwMzg5NTU3MjU5.W4Rd2A.AMvWhVosAKueyz2OvTBZTCX9KOM
+TEST_BOT_TOKEN = Njg5MjU4NjQ0OTMxNzM5NjQ5.XnAQIg.WIXhfBxcAjmCqEqyCgmwkCIWSh0
