--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
     "version": "1.0.0",
     "description": "cool bot",
     "main": "bot.js",
+   
     "dependencies": {
         "delete": "^1.1.0",
-        "discord-paginate": "^1.0.2",
         "discord.js": "^12.2.0",
-        "discord.js-pagination": "^1.0.2",
         "dotenv": "^8.2.0",
         "heroku": "^7.40.0",
         "moment": "^2.24.0",
-        "npm": "^6.14.8",
-        "pagination": "^0.4.6"
+        "npm": "^6.14.8"
     },
     "devDependencies": {
+        "node": "12.18.3",
         "nodemon": "^2.0.4"
     },
     "scripts": {
