--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "description": "cool bot",
     "main": "bot.js",
-   
     "dependencies": {
+        "@top-gg/sdk": "^3.1.2",
         "delete": "^1.1.0",
         "discord.js": "^12.2.0",
         "dotenv": "^8.2.0",
