--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "dotenv": "^8.2.0",
         "heroku": "^7.40.0",
         "moment": "^2.24.0",
-        "npm": "^6.14.8"
+        "npm": "^6.14.8",
+        "topgg-autoposter": "^2.0.0"
     },
     "devDependencies": {
         "node": "12.18.3",
